LEXSYSTEST-84 - If builds fail, then exit system tests.